// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount and unmount component could be updated and unmounted without errors 1`] = `
<DocumentFragment>
  <div
    class="container-0-2-1"
  />
</DocumentFragment>
`;

exports[`mount and unmount component could be updated and unmounted without errors 2`] = `
<DocumentFragment>
  <a
    class="container-0-2-1 pressable-0-2-2 className"
    href="http://google.com"
  />
</DocumentFragment>
`;
